# trustworthy-rag-au

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
config/: default.yaml  models.yaml
data/: __init__.py  download.py  sources.yaml
eval/: __init__.py  analyze_per_category.py  baselines.py  benchmark.yaml  benchmark_50.yaml  benchmark_50_v2.yaml  benchmark_ablation.yaml  calibrate.py  comparison_eval.py  comparison_metrics.py  llm_judge.py  metrics.py  plot_benchmark.py  plot_results.py  retrieval_eval.py
eval/results/: sample_output.json
scripts/: build_index.py  pull_models.py  run_ablations.py  run_benchmark.py  smoke_test.py
src/: __init__.py  chunking.py  confidence.py  config.py  faithfulness.py  generation.py  parsing.py  pipeline.py  schemas.py
src/models/: __init__.py  embed.py  llm.py  manager.py  nli.py  registry.py
src/prompts/: answer.j2  refusal.j2
src/retrieval/: __init__.py  bm25.py  dense.py  hybrid.py  reranking.py
ui/: components.py  gradio_app.py
